--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
             
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="_js/script.js"></script>
 </body>
 </html>
